# alpaca-oopsla2017

./: .gitignore  .gitmodules  Makefile  README.md  _config.yml  a.out  compile.sh  compile_and_run.sh  log.txt  test.c  test.ll
bld/: Makefile
bld/alpaca/: Makefile  ar.S  ar.a.bc  ar.out.map  cuckoo.S  cuckoo.a.bc  cuckoo.out.map  dump.txt  dump2.txt  dump3.txt  log.txt  log2.txt  main.alpaca.bc  main.bc  main_ar_alpaca.alpaca.bc  main_ar_alpaca.bc  (+10 more)
data/: cypher-hello-128.txt  cypher-hello-32.txt  cypher-micro-128.txt  cypher-nano-128.txt  cypher-wiki-1024.txt  cypher-wiki-128.txt  cypher-wiki-2048.txt  cypher-wiki-256.txt  cypher-wiki-512.txt  cypher-wiki-tiny-1024.txt  cypher-wiki-tiny-128.txt  key.txt  key1024.txt  key2048.txt  key256.txt  key32.txt  key512.txt  key64.txt  keysize.h  plain-micro.txt  plain-nano.txt  plain-wiki-short.txt  plain-wiki-tiny.txt  plain-wiki.txt  plaintext-micro.txt  plaintext-wiki-short.txt  plaintext-wiki-tiny.txt  plaintext-wiki.txt  plaintext.txt  private1024.pem  private1024.txt  private128.pem  private128.txt  private2048.pem  private2048.txt  private256.pem  private256.txt  private32.pem  private32.txt  private512.pem  (+3 more)
ext/alpaca/__LLVM/: CMakeLists.txt  README.txt
ext/alpaca/__LLVM/DINO/: CMakeLists.txt  DINOComplexityAnalysis.cpp  DINOTaskBoundaries.h  DINOTaskSplit.h  DINOVersioner.cpp
ext/alpaca/__LLVM/Tests/: callchain.c  lowpower_ar.c
ext/mementos/llvm/: CMakeLists.txt  README.txt
ext/mementos/llvm/include/mementos/: Mementos.h  Passes.h
ext/mementos/llvm/lib/Mementos/: SizeGlobals.cpp
golden_result/: ar.txt  bc.txt  blowfish.txt  cem.txt  cuckoo.txt  rsa.txt
src/: .main.c.swn  _main.c  dirty_buf.h  main.c  main2.c  main_ar_alpaca.c  main_ar_chain.c  main_ar_dino.c  main_bc_alpaca.c  main_bc_chain.c  main_bc_dino.c  main_blowfish_alpaca.c  main_blowfish_chain.c  main_blowfish_dino.c  main_cem_alpaca.c  main_cem_chain.c  main_cem_dino.c  main_cuckoo_alpaca.c  main_cuckoo_chain.c  main_cuckoo_dino.c  main_rsa_alpaca.c  main_rsa_chain.c  main_rsa_dino.c  orig_main.c  pins.h  test.c
(+195 files in other folders)
